fix for top-bar dropdown arrow vertical alignment

--- a/scss/foundation/components/_top-bar.scss
+++ b/scss/foundation/components/_top-bar.scss
@@ -613,9 +613,8 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
                 &:after {
                   border: none;
                   content: "\00bb";
-                  line-height: 1.2;
-                  margin-top: -1px;
-                  top: 1rem;
+                  top: rem-calc(3);
+
                   #{$opposite-direction}: 5px;
                 }
               }
